<resources>
    <string name="app_name">Demo4</string>
    <string name="used_of">已使用</string>
    <string name="navigation_image">图片</string>
    <string name="large_picture">大图</string>
    <string name="DCIM">DCIM</string>
    <string name="action_search">搜索</string>
    <string name="settings">更多</string>
    <string name="action">更多</string>
    <string name="ok">确定</string>
    <string name="done">完成</string>
    <string name="cancal">取消</string>
    <string name="undo">撤销</string>
    <string name="device_store">设备存储</string>
    <string name="title_select">选择项目</string>
    <string name="all_select">全部</string>
    <string name="action_create">新建文件夹</string>
    <string name="create">新建</string>
    <string name="already_exist">已经存在</string>
    <string name="cannot_create">无法创建</string>
    <string name="action_delete">删除</string>
    <string name="delete_message">个文件将被删除</string>
    <string name="delete_undo">个文件被删除是否撤销</string>
    <string name="cannot_delete">无法删除</string>
    <string name="action_rename">重命名文件夹</string>
    <string name="rename">重命名</string>
    <string name="cannot_rename">无法重命名</string>
    <string name="action_sort">排序方式</string>
    <string name="sort_lastmodified">时间</string>
    <string name="sort_name">名称</string>
    <string name="sort_size">大小</string>
    <string name="action_send">移动</string>
    <string name="move">移动至</string>
    <string name="action_copy">复制</string>
    <string name="copy">复制至</string>
    <string name="replace">替换</string>
    <string name="used_all">应用至所有项目</string>
    <string name="this_name">此文件夹名称</string>
    <string name="already_used">已在目标文件夹中使用。</string>
    <string name="cannot_copy">目标文件夹是源文件夹的子文件夹</string>
    <string name="name_used">文件夹名称已使用</string>
    <string name="action_edit">编辑</string>
    <string name="cannot_open">不能打开</string>
    <string name="double_click">不要双击</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
