<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:text="此文件夹名称(1114)已在目标文件夹中使用。"/>
    <CheckBox
        android:id="@+id/check_to_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="7dp"
        android:layout_marginStart="19dp"
        android:layout_below="@+id/used"/>
    <TextView
        android:id="@+id/used_all"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="应用至所有项目"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/used"
        android:layout_toRightOf="@+id/check_to_all"/>

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/used_all"
        android:layout_toLeftOf="@+id/replace"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:textSize="15sp"
        android:textColor="#FFA500"
        android:clickable="true"
        android:text="@string/cancal"/>
    <TextView
        android:id="@+id/replace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/used_all"
        android:layout_toLeftOf="@+id/rename"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:textSize="15sp"
        android:textColor="#FFA500"
        android:clickable="true"
        android:text="@string/replace"/>
    <TextView
        android:id="@+id/rename"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/used_all"
        android:layout_alignRight="@+id/used"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="#FFA500"
        android:clickable="true"
        android:text="@string/rename"/>


</RelativeLayout>